# hx

./: .dockerignore  .gitignore  DetailedTx.hs  Dockerfile  Electrum.hs  Mnemonic.hs  ParseScript.hs  PrettyScript.hs  README.md  Utils.hs  c2n-regen.sh  default.nix  hx.cabal  hx.hs  shell.nix  stack.yaml
nix/: RFC1751.nix
tests/SHA256.t/: TESTRECIPE  stdin  stdout
tests/SHA256PBKDF2-password-salt-1-32.t/: TESTRECIPE  stdout
tests/SHA256PBKDF2-password-salt-2-32.t/: TESTRECIPE  stdout
tests/SHA256PBKDF2-password-salt-4096-32.t/: TESTRECIPE  stdout
tests/SHA256PBKDF2-passwordPASSWORDpassword-saltSALTsaltSALTsaltSALTsaltSALTsalt-4096-40.t/: TESTRECIPE  stdout
tests/SHA512PBKDF2-gloom-knee-orient-skull-dance-awake-payment-unusual-inflict-cinnamon-blush-seed-elder-crawl-size-catch-inflict-perfect-foster-sugar-fox-mnemonic-2048-64.t/: TESTRECIPE
tests/SHA512PBKDF2-gloom-knee-orient-skull-dance-awake-payment-unusual-inflict-cinnamon-blush-seed-elder-crawl-size-catch-inflict-perfect-foster-sugar-fox-mnemonichunter2-2048-64.t/: TESTRECIPE  stdout
tests/SHA512PBKDF2-password-salt-1-64.t/: TESTRECIPE  stdout
tests/SHA512PBKDF2-password-salt-2-64.t/: TESTRECIPE  stdout
tests/SHA512PBKDF2-password-salt-4096-64.t/: TESTRECIPE  stdout
tests/SHA512PBKDF2-passwordPASSWORDpassword-saltSALTsaltSALTsaltSALTsaltSALTsalt-4096-64.t/: TESTRECIPE  stdout
tests/addr-of-electrum-0-1.t/: TESTRECIPE  stdin  stdout
tests/addr-of-electrum-42-0.t/: TESTRECIPE  stdout
tests/addr.t/: TESTRECIPE  stdout
tests/base58-decode.t/: TESTRECIPE
tests/base58-encode-of-addr.t/: stdin  (+1 more)
(+453 files in other folders)
