name:                hx
version:             0.1.0.0
synopsis:            Bitcoin CLI tools: Haskell port of Sx using Haskoin
homepage:            https://github.com/np/hx
license:             GPL-3
license-file:        LICENSE
author:              Nicolas Pouillard
maintainer:          nicolas.pouillard@gmail.com
copyright:           Nicolas Pouillard (2014)
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable hx
  main-is:             hx.hs
  ghc-options:         -Wall
  build-depends:       base >=4.6, haskoin, bytestring, base16-bytestring,
                       scientific, binary, RFC1751 >= 0.3
  default-language:    Haskell2010
  -- other-modules:       
  -- other-extensions:    
